config/manager/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-platform-operator-egress
  namespace: kubernetes-platform-operator-system
  labels:
    app.kubernetes.io/name: kubernetes-platform-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-platform-operator
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
